2002-12-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/readme.atan2: remove now unrelated file.

2002-12-23  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/iom163.h: UBRRH -> UBRRHI.

2002-12-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdio/fputs.c: New file.
	* libc/stdio/fputs_p.c: Ditto.
	* libc/stdio/putc.S: Ditto.
	* libc/stdio/putchar.c: Ditto.
	* libc/stdio/puts.c: Ditto.
	* libc/stdio/puts_p.c: Ditto.
	* include/stdio.h: document fputs*(), putc*(), puts*().
	* libc/stdio/Makefile.am: include new files.

2002-12-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/atan.S: completely rewritten, much better accuracy.
	* libm/fplib/atan2.S: completely rewritten;
		both contributed by Reiner Patommel.

2002-12-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/fplib.inc: add FPPUSH, FPPOP, FPCLR, and FPSWAP
		macros; contributed by Reiner Patommel.

2002-12-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/twitest/twitest.c: TWI example, new file.
	* doc/examples/twitest/twitest.dox: TWI example, docs.
	* doc/examples/twitest/Makefile: TWI example, sample makefile.
	* doc/api/doxygen.config.in: include twitest.
	* doc/examples/Makefile.am: include twitest.

2002-12-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/iom163.h: add bit definitions for TWSR.
	* include/avr/iom323.h: ditto.

2002-12-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/twi.h: add some more useful macros.

2002-12-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: add Eric's entry about relocating code to a
		fixed address.

2002-12-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/using-tools.dox: add an anchor used in the FAQ.

2002-12-17  Theodore A. Roth  <troth@openavr.org>

	* include/inttypes.h: Added more dox, since doxygen isn't generating
	them by default anymore.

2002-12-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/wdt.h: fix typo.
